src/objects/Teams__c.object
<CustomObject>
    <fields>
        <fullName>Access_Level__c</fullName>
        <defaultValue>&quot;Read Access&quot;</defaultValue>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read Access</fullName>
                </value>
                <value>
                    <fullName>Edit Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Set_Ids__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Set Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>User__r.BU_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Identifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Access_Status__c</fullName>
        <label>Grant Access Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>$User.Id = User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <defaultValue>IF(CONTAINS($UserRole.Name, &apos;Cocoa&apos;), &apos;Cocoa Sales Manager&apos;,
(IF(CONTAINS($UserRole.Name, &apos;Dairy&apos;), &apos;Dairy Sales Manager&apos;,
(IF(CONTAINS($UserRole.Name, &apos;Spice&apos;), &apos;Spice Sales Manager&apos;,
(IF(CONTAINS($UserRole.Name, &apos;Edible_Nuts&apos;), &apos;Edible_Nuts Sales Manager&apos;, &apos; &apos;)))))))</defaultValue>
        <label>Role Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cocoa Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Dairy Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Spice Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Edible_Nuts Sales Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Role_Name__c</fullName>
        <label>User Role Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cocoa Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Cocoa PDI Manager</fullName>
                </value>
                <value>
                    <fullName>Dairy Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Dairy PDI Manager</fullName>
                </value>
                <value>
                    <fullName>Spice Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Spice PDI Manager</fullName>
                </value>
                <value>
                    <fullName>Edible Nuts Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Edible Nuts PDI Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_s_Role_Name__c</fullName>
        <formula>IF(CONTAINS(User__r.UserRole.Name, &apos;Cocoa Sales&apos;), &apos;Cocoa Sales Manager&apos;,
(IF(CONTAINS(User__r.UserRole.Name, &apos;Cocoa PD&amp;I&apos;), &apos;Cocoa PDI Manager&apos;,
(IF(CONTAINS(User__r.UserRole.Name, &apos;Dairy Sales&apos;), &apos;Dairy Sales Manager&apos;,
(IF(CONTAINS(User__r.UserRole.Name, &apos;Dairy PD&amp;I&apos;), &apos;Dairy PDI Manager&apos;,
(IF(CONTAINS(User__r.UserRole.Name, &apos;Spice Sales&apos;), &apos;Spice Sales Manager&apos;,
(IF(CONTAINS(User__r.UserRole.Name, &apos;Spice PDI&apos;), &apos;Spice PDI Manager&apos;,
(IF(CONTAINS(User__r.UserRole.Name, &apos;Edible_Nuts Sales&apos;), &apos;Edible Nuts Sales Manager&apos;,
(IF(CONTAINS(User__r.UserRole.Name, &apos;Edible_Nuts PDI&apos;), &apos;Edible Nuts PDI Manager&apos;,
(IF(CONTAINS(User__r.UserRole.Name, &apos;Coffee&apos;), &apos;Coffee Sales Manager&apos;, &apos; &apos;)))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User&apos;s Role Name</label>
        <type>Text</type>
    </fields>
    <label>Teams</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Grant_Access_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Role_Name__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Teams_Accounts</fullName>
        <columns>Account__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Role_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Team__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Teams&apos; Accounts</label>
    </listViews>
    <nameField>
        <label>Teams Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Primary_Member_can_be_changed_to_read</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED(Access_Level__c) ,  ISPICKVAL(Access_Level__c, &apos;Read Access&apos;) ,  Is_Primary__c )</errorConditionFormula>
        <errorDisplayField>Access_Level__c</errorDisplayField>
        <errorMessage>Primary Member Cannot Be Read Access</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Primary_from_Same_BU</fullName>
        <active>false</active>
        <errorConditionFormula>(ISNEW() &amp;&amp;  CONTAINS( $UserRole.Name , &apos;Dairy&apos;) &amp;&amp;   Is_Primary__c &amp;&amp; NOT((ISBLANK(Account__r.Dairy_Owner_Id__c)))) ||((ISNEW() &amp;&amp;  CONTAINS( $UserRole.Name , &apos;Cocoa&apos;) &amp;&amp;  Is_Primary__c &amp;&amp; NOT((ISBLANK( Account__r.Cocoa_Owner__c ))))) ||
((ISNEW() &amp;&amp;  CONTAINS( $UserRole.Name , &apos;Spice&apos;) &amp;&amp;  Is_Primary__c &amp;&amp; NOT((ISBLANK( Account__r.Spice_Owner_Id__c ))))) ||
((ISNEW() &amp;&amp;  CONTAINS( $UserRole.Name , &apos;Edible_Nuts&apos;) &amp;&amp;  Is_Primary__c &amp;&amp; NOT((ISBLANK( Account__r.Edible_Nuts_Owner_Id__c )))))</errorConditionFormula>
        <errorMessage>Theres an existing Primary Owner assigned for this account</errorMessage>
    </validationRules>
</CustomObject>